// Copyright 2021 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.server.encryptedcookies;

option go_package = "go.chromium.org/luci/server/encryptedcookies/internal/encryptedcookiespb";

// SessionCookie is a clear-text representation of a session cookie.
//
// It contains the session ID and the per-session keyset used to encrypt the
// sensitive part of the session stored in the Private proto.
message SessionCookie {
  bytes session_id = 1;
  bytes keyset = 2; // serialized google.crypto.tink.Keyset with AEAD keys
}
